# vigil

./: .gitignore  CITATION.cff  LICENSE  README.md
backend/: app.py  config.py  models.py  pyproject.toml  routes.py
backend/llm/: __init__.py  client.py
backend/plugins/: __init__.py  base.py  registry.py
backend/plugins/moralization/: __init__.py  analyzer.py  config.py  output_formats.py
backend/plugins/moralization/prompts/: cot_json_0shot.yaml  cot_json_0shot_en.yaml
frontend/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/background/: index.ts
frontend/src/content/: contentHider.ts  domUtils.ts  genericExtraction.ts  highlighter.ts  index.ts  reformulator.ts  tweetExtraction.ts  tweetParser.ts  viewportTracker.ts
frontend/src/llm/: null.ts  openai.ts  service.ts  types.ts  webllm.ts  webllmModels.ts
frontend/src/offscreen/: messages.ts  offscreen.html  offscreen.ts
frontend/src/plugins/: registry.ts  types.ts
frontend/src/plugins/cognitiveBiasTrigger/: config.ts  llm.ts  llmSchema.ts  reformulation.ts  regex.ts
frontend/src/plugins/server/: client.ts  types.ts
frontend/src/shared/: cacheManager.ts  cognitive_bias_trigger_taxonomy.json  content.ts  findings.ts  messages.ts  platform.ts  settings.ts  settingsStorage.ts  utils.ts
frontend/src/sidepanel/: analysisService.ts  index.html  index.ts  settingsController.ts  styles.css
